deployment/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: clapy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: clapy-backend:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: clapy
spec:
  ports:
  - port: 8080
  selector:
    app: backend
